hw03/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dach-hw03-service
spec:
  selector:
    app: hw03-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000 
  type: NodePort
