hw03/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dach-hw03-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/(.*)
        pathType: Prefix
        backend:
          serviceName: dach-hw03-service
          servicePort: 8000
